# Prop-AMM-Multi-Strategy-Competition-Engine

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  capital.rs  cli.rs  engine_lib.rs  lib.rs  market.rs  runner.rs  sim.rs  submission_0.rs  submission_1.rs  submission_2.rs  submission_3.rs  submission_4.rs  submission_5.rs  tests.rs  types.rs
UX/: prop_amm_submit.jsx
apps/backend/: README.md
apps/backend/app/: config.py  job_runtime.py  main.py  models.py
apps/dashboard/: index.html  package-lock.json  package.json
apps/dashboard/src/: App.jsx  PropAMMSubmit.jsx  main.jsx  styles.css
apps/worker/: README.md  worker.py
deploy/docker/: Dockerfile.backend  Dockerfile.dashboard  Dockerfile.worker  docker-compose.yml  run-nohup.sh
deploy/render/: backend.Dockerfile  dashboard.Dockerfile  render.yaml  start-backend.sh  start-worker.sh  worker.Dockerfile
mnt/user-data/outputs/prop_amm_multi/programs/starter/src/: lib.rs
scripts/: dev-down.sh  dev-status.sh  dev-up.sh
