[package]
name = "prop_amm_engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "engine_lib.rs"

[[bin]]
name = "prop-amm-multi"
path = "cli.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
wincode = "0.3"
pinocchio = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
